# matchtoolz

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/matchtoolz/: __init__.py  collectiontoolz.py  collectiontoolz_test.py  regextoolz.py  regextoolz_test.py
